--- a/static/export2web/src/index.css
+++ b/static/export2web/src/index.css
@@ -1,30 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo {
+    height: 32px;
+    margin: 16px;
+    background: rgba(255, 255, 255, 0.2);
 }
-
-#components-layout-demo-top-side-2 .logo {
-  float: left;
-  width: 120px;
-  height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
+  
+.site-layout-sub-header-background {
+    background: #fff;
 }
-
-.ant-row-rtl #components-layout-demo-top-side-2 .logo {
-  float: right;
-  margin: 16px 0 16px 24px;
-}
-
+  
 .site-layout-background {
-  background: #fff;
+    background: #fff;
+}
+
+[data-theme="dark"] .site-layout-sub-header-background {
+    background: #141414;
+}
+
+html,body,#container{
+    width: 100%;
+    height: 100%;
+}
+
+.ant-layout {
+    height: 100%;
 }
